[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "advent-of-code"

[features]
allow_dead_code = []

[dependencies]
lazy_static = "1"
md-5 = "0.10"
ordered-float = "4"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1"
