[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "advent-of-code"

[features]
allow_dead_code = []

[dependencies]
anyhow = "1"
md-5 = "0.10"
nalgebra = "0.33.2"
num = "0.4"
ordered-float = "5"
rand = "0.9.0"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
